--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+ 
     <title>Colégio Tordo Login</title>
 </head>
 <body>
@@ -10,10 +12,12 @@
         <form>
             <h1>Login Colégio Tordo</h1>
             <div class="input-box">
-                <input placeholder="Usuário" type="email">
+                <label for="usuario"><i class="fas fa-user"></i> Usuário:</label>
+                    <input type="text" id="usuario" name="usuario">
             </div>
             <div class="input-box">
-                <input placeholder="Senha" type="password">
+                <label for="senha"><i class="fas fa-lock"></i> Senha:</label>
+                    <input type="password" id="senha" name="senha">
             </div>
         </form>
 
@@ -21,3 +25,4 @@
     
 </body>
 </html>
+
