--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
  
     <title>Colégio Tordo Login</title>
 </head>
@@ -18,6 +19,20 @@
             <div class="input-box">
                 <label for="senha"><i class="fas fa-lock"></i> Senha:</label>
                     <input type="password" id="senha" name="senha">
+            </div>
+
+            <div class="remember-forgot">
+                <label>
+                    <input type="checkbox">
+                    Lembrar minha senha
+                </label>
+                <a href="#">Esqueci minha senha</a>
+            </div>
+
+            <button type="submit">Login</button>
+
+            <div class = "register-link">
+                <p>Não tem uma conta? <a href="#">Cadastre-se</a></p>
             </div>
         </form>
 
