--- a/admin_tela_1.html
+++ b/admin_tela_1.html
@@ -12,11 +12,11 @@
     <main class="container">
         <h1>Painel Administrativo</h1>
         <nav class="menu"
-        <ul>
+        <div>
             <li><a href="#"><i class="fas fa-book"></i> Modificar Disciplinas</a></li>
             <li><a href="#"><i class="fas fa-clipboard-list"></i> Modificar Notas</a></li>
             <li><a href="#"><i class="fas fa-user-minus"></i> Modificar Faltas</a></li>
-        </ul>
+        </div>
     </nav>
 </main>
 </body>
