--- a/aluno_1.html
+++ b/aluno_1.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="admin_tela_1.css">
+    <link rel="stylesheet" href="aluno_1.css">
 
-    <title>Colégio Tordo</title>
+    <title>Colégio Tordo - Aluno</title>
 </head>
 <body>
     <main class="container">
-        <h1>Painel Administrativo</h1>
+        <h1>Portal do Aluno</h1>
         <nav class="menu">
             <ul>
-                <li><a href="#"><i class="fas fa-book"></i> Modificar Disciplinas</a></li>
-                <li><a href="#"><i class="fas fa-clipboard-list"></i> Modificar Notas</a></li>
-                <li><a href="#"><i class="fas fa-user-minus"></i> Modificar Faltas</a></li>
+                <li><a href="#"><i class="fas fa-file-alt"></i> Ver Boletim</a></li>
+                <li><a href="#"><i class="fas fa-book-open"></i> Ver Disciplinas</a></li>
+                <li><a href="#"><i class="fas fa-chart-line"></i> Ver Desempenho</a></li>
             </ul>
         </nav>
     </main>
 </body>
 </html>
- 
