finalizada as funcionalidades do aluno

--- a/aluno_1.html
+++ b/aluno_1.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="aluno_1.css">
-
     <title>Colégio Tordo - Aluno</title>
 </head>
 <body>
@@ -13,9 +12,9 @@
         <h1>Portal do Aluno</h1>
         <nav class="menu">
             <ul>
-                <li><a href="#"><i class="fas fa-file-alt"></i> Ver Boletim</a></li>
-                <li><a href="#"><i class="fas fa-book-open"></i> Ver Disciplinas</a></li>
-                <li><a href="#"><i class="fas fa-chart-line"></i> Ver Desempenho</a></li>
+                <li><a href="boletim.html"><i class="fas fa-file-alt"></i> Ver Boletim</a></li>
+                <li><a href="disciplinas.html"><i class="fas fa-book-open"></i> Ver Disciplinas</a></li>
+                <li><a href="desempenho.html"><i class="fas fa-chart-line"></i> Ver Desempenho</a></li>
             </ul>
         </nav>
     </main>
